# gglisten

./: .gitignore  README.md  pyproject.toml  setup.sh  uninstall.sh
gglisten/: __init__.py  cli.py  clipboard.py  config.py  level_meter.py  notify.py  recorder.py  storage.py  transcriber.py
gglisten/ai/: __init__.py  processor.py  templates.py
level-meter/: Cargo.toml  build.sh
level-meter/src/: main.rs
scripts/raycast/: dictation.py  dictation_clean.py  dictation_history.py  dictation_retranscribe.py  dictation_status.py  gglisten.sh  gglisten_clean.sh  gglisten_history.sh  gglisten_retranscribe.sh  gglisten_snippet.py  gglisten_status.sh
